--- a/AuctionManagementSystem/Views/Home/Index.cshtml
+++ b/AuctionManagementSystem/Views/Home/Index.cshtml
@@ -111,7 +111,7 @@
                                             <i class="bi bi-person-fill"></i>
                                         </a>
                                         <ul class="dropdown-menu account-list-mobile" aria-labelledby="dropdownMenu4">
-                                            <li class="dropdown-item"><a href="login.html">My account</a></li>
+                                            <li class="dropdown-item"><a href="Account/login">My account</a></li>
                                             <li class="dropdown-item"><a href="register.html">Settings</a></li>
                                             <li class="dropdown-item"><a href="~/Account/login">Login</a></li>
                                             <li class="dropdown-item mb-0"><a href="register.html">Register</a></li>
@@ -160,7 +160,7 @@
                                     <ul class="sub-menu">
                                         <li><a href="about.html">about</a></li>
                                         <li><a href="winner.html">winner</a></li>
-                                        <li><a href="login.html">login</a></li>
+                                        <li><a href="Account/login">login</a></li>
                                         <li><a href="register.html">register</a></li>
                                         <li><a href="faq.html">faq</a></li>
                                         <li><a href="privacy.html">Privacy Policy</a></li>
@@ -198,7 +198,7 @@
                                             <i class="bi bi-person-fill"></i>
                                         </a>
                                         <ul class="dropdown-menu account-list" aria-labelledby="dropdownMenu2">
-                                            <li class="dropdown-item"><a href="login.html">My account</a></li>
+                                            <li class="dropdown-item"><a href="Account/login">My account</a></li>
                                             <li class="dropdown-item"><a href="register.html">Settings</a></li>
                                             <li class="dropdown-item"><a href="~/Account/login">Login</a></li>
                                             <li class="dropdown-item"><a href="register.html">Register</a></li>
@@ -1241,7 +1241,7 @@
                                     <h5 class="widget-title">Quick Links</h5>
 
                                     <ul class="widget-links">
-                                        <li><a href="login.html">My Account</a></li>
+                                        <li><a href="Account/login">My Account</a></li>
                                         <li><a href="about.html">Affiliate Program</a></li>
                                         <li><a href="contact.html">Lawyer Consulting</a></li>
                                         <li><a href="#">Sorteo Locemses</a></li>
