--- a/AuctionManagementSystem/Views/Vehicle/vehiclesubmission.cshtml
+++ b/AuctionManagementSystem/Views/Vehicle/vehiclesubmission.cshtml
@@ -117,8 +117,25 @@
             resize: none;
         }
 
+        .css-7jf5cu {
+            font-family: 'Barlow Semi Condensed';
+            color: #2C2E31;
+            font-weight: 600;
+            padding-top: 0px;
+            padding-right: 0px;
+            padding-bottom: 0px;
+            padding-left: 0px;
+            margin-top: 0px;
+            margin-right: 0px;
+            margin-bottom: 16px;
+            margin-left: 0px;
+            text-align: undefined;
+            text-transform: inherit;
+            -webkit-text-decoration: none;
+            text-decoration: none;
+            font-size: 20px;
+            line-height: 30px;
         }
-
         .css-foou8n {
             background: #F7F7F7;
             padding: 24px;
@@ -143,6 +160,34 @@
             text-decoration: none;
             font-size: 20px;
             line-height: 30px;
+        }
+
+        .css-1rpfd8x {
+            font-family: 'Barlow Semi Condensed';
+            color: #2C2E31;
+            font-weight: 400;
+            padding-top: 0px;
+            padding-right: 0px;
+            padding-bottom: 0px;
+            padding-left: 0px;
+            margin-top: 0px;
+            margin-right: 0px;
+            margin-bottom: 0px;
+            margin-left: 0px;
+            text-align: undefined;
+            text-transform: inherit;
+            -webkit-text-decoration: none;
+            text-decoration: none;
+            font-size: 18px;
+            line-height: 26px;
+            color: #3B3E41;
+        }
+
+        .css-348ps2 {
+            background: #F7F7F7;
+            padding: 24px;
+            padding-bottom: 24px;
+            margin-bottom: 4px;
         }
 </style>
     
@@ -272,7 +317,7 @@
                         <form action="vehiclesubmission" method="post" enctype="multipart/form-data" class="w-100">
                             <div class="pe bgground">
                                 <p class="css-7jf5cu e1kg4do42">Your Info</p><div class="css-15rk5s6">
-                                <h3>Full name</h3>
+                                    <p class="css-1rpfd8x e1kg4do43">Full name</p>
                                     <div class="css-zoser8">
                                         <div class="css-j7qwjs">
                                             <div class="css-bjn8wh ea6uyek0">
@@ -284,10 +329,9 @@
                                     </div>
                                 </div>
                             </div>
-                            <h3>Vehicle Details</h3>
+                            <p class="css-1rpfd8x e1kg4do43">Vehicle Details</p>
                             <div class="pe bgground">
-                                <h3>
-                                    Year</h3>
+                                <p class="css-1rpfd8x e1kg4do43">Year</p>
                                 <div class="css-wjyzxx">
                                     <div class=" css-1obpye2 e1iejzzq11">
                                         <div class="css-mk1o7y e1iejzzq5">
@@ -351,7 +395,7 @@
                                         </div>
                                     </div>
                                 </div>
-                            </div><h3>Vehicle History &amp; Condition</h3>
+                            </div> <p class="css-1a77sk6 e1kg4do42">Vehicle History &amp; Condition</p>
                             <div class="css-348ps2"><p class="css-1rpfd8x e1kg4do43">What month/year did you purchase this vehicle?</p><div class="css-zoser8">
                             <div name="purchaseDate" class="css-0">
                             <div >
