--- a/AuctionManagementSystem/Views/Vehicle/vehiclesubmission.cshtml
+++ b/AuctionManagementSystem/Views/Vehicle/vehiclesubmission.cshtml
@@ -283,6 +283,24 @@
                 $("#AddInfoR").hide();
             });
             //End--->
+            var maxchars = 2;
+            var maxYear = 4;
+            $('#VehiclePurchaseMoth').keyup(function () {
+                debugger;
+                var tlength = $(this).val().length;
+                $(this).val($(this).val().substring(0, maxchars));
+                var tlength = $(this).val().length;
+                remain = maxchars - parseInt(tlength);
+                $('#VehiclePurchaseMoth').text(remain);
+            });
+            $('#VehiclePurchaseYear').keyup(function () {
+                debugger;
+                var tlength = $(this).val().length;
+                $(this).val($(this).val().substring(0, maxYear));
+                var tlength = $(this).val().length;
+                remain = maxYear - parseInt(tlength);
+                $('#VehiclePurchaseYear').text(remain);
+            });
         });
     </script>
     <script>
@@ -399,9 +417,9 @@
                             <div class="css-348ps2"><p class="css-1rpfd8x e1kg4do43">What month/year did you purchase this vehicle?</p><div class="css-zoser8">
                             <div name="purchaseDate" class="css-0">
                             <div >
-                                            <input type="text" placeholder="MM" value="@Model.VehiclePurchaseMoth" style="width:100px" name="VehiclePurchaseMoth">
+                                            <input type="text" placeholder="MM" value="@Model.VehiclePurchaseMoth" id="VehiclePurchaseMoth" style="width:100px" name="VehiclePurchaseMoth">
                                             @Html.ValidationMessageFor(x=>x.VehiclePurchaseMoth,string.Empty,new {@class="text-danger"})
-                                            <input type="text" placeholder="YYYY" value="@Model.VehiclePurchaseYear" style="width:100px" name="VehiclePurchaseYear">
+                                            <input type="text" placeholder="YYYY" id="VehiclePurchaseYear" value="@Model.VehiclePurchaseYear" style="width:100px" name="VehiclePurchaseYear">
                                            @Html.ValidationMessageFor(x=>x.VehiclePurchaseYear,string.Empty,new {@class="text-danger"})
                             </div></div></div></div><div class="css-348ps2">
                                 <p class="css-1rpfd8x e1kg4do43">How many miles (or kilometers) have been added during your ownership?</p>
@@ -424,8 +442,8 @@
                                 <p class="css-1rpfd8x e1kg4do43">Do you know anything about this vehicle's prior ownership or history?</p><div class="css-1s9ifpo">
                                     <div>
                                         <div class="css-1q701y2 eddhcra1">
-                                            <button type="button" class="btnstyle" id="btn_VehicleOwnerShipHistoryY" >Yes</button>
-                                            <button type="button" class="btnstyle" id="btn_VehicleOwnerShipHistoryN">No</button>
+                                            <button type="button" class="btnstyle" name="VehicleOwnerShipHistory" value="1" id="btn_VehicleOwnerShipHistoryY">Yes</button>
+                                            <button type="button" class="btnstyle" name="VehicleOwnerShipHistory" value="0" id="btn_VehicleOwnerShipHistoryN">No</button>
                                         </div>
                                     </div>
                                 </div>
@@ -441,8 +459,8 @@
                                 </div>
                             </div><div class="css-348ps2"><p class="css-1rpfd8x e1kg4do43">To your knowledge, has this vehicle ever been in an accident?</p>
                             <div class="css-1s9ifpo"><div><div class="css-1q701y2 eddhcra1">
-                               <button aria-pressed="false" type="button" class="btnstyle" id="btn_VehicleAccidentY">Yes</button>
-                                            <button aria-pressed="false" type="button" class="btnstyle" id="btn_VehicleAccidentN">NO</button>
+                                            <button aria-pressed="false" type="button" class="btnstyle" name="btnVehicleAccident" value="1" id="btn_VehicleAccidentY">Yes</button>
+                                            <button aria-pressed="false" type="button" name="btnVehicleAccident" class="btnstyle" value="0" id="btn_VehicleAccidentN">NO</button>
                                         </div>
                                     </div>     <div class="chakra-collapse" style="overflow: initial; display:block; opacity: 1; height: auto;" id="VehicleAccident">
                                         <hr aria-orientation="horizontal" class="chakra-divider css-cnn4jn">
@@ -460,8 +478,8 @@
                                 <div class="css-1s9ifpo">
                                     <div>
                                         <div class="css-1q701y2 eddhcra1">
-                                            <button aria-pressed="false" type="button" class="btnstyle" id="btn_VehicleDmgRprY">Yes</button>
-                                            <button aria-pressed="false" type="button" class="btnstyle" id="btn_VehicleDmgRprN">NO</button>
+                                            <button aria-pressed="false" type="button" class="btnstyle" name="VDamage" value="1" id="btn_VehicleDmgRprY">Yes</button>
+                                            <button aria-pressed="false" type="button" class="btnstyle" name="VDamage" value="0" id="btn_VehicleDmgRprN">NO</button>
                                         </div>
                                     </div>
                                 </div>
@@ -604,10 +622,11 @@
                                 </div>
                             </div>
                             <p class="css-1a77sk6 e1kg4do42">Photos</p><div class="css-foou8n">
-                            <div class="css-zoser8"><p class="css-1jccshs e1kg4do43">Please upload at least <strong>10 photos</strong> of your vehicle using the submission box below. Your photos will begin uploading when you click the 'Submit' button at the bottom of this form.<br><br>Include images of the interior and exterior that provide a sense for your vehicle's current condition. The higher quality your images are, the easier it will be for us to assess whether your vehicle is right for our platform.<br><br>
+                            <div class="css-zoser8"><p class="css-1jccshs e1kg4do43">Please upload at least <strong>10 photos</strong> of your vehicle using the submission box below. 
+                                Your photos will begin uploading when you click the 'Submit' button at the bottom of this form.<br><br>Include images of the interior and exterior that provide a sense for your vehicle's current condition. The higher quality your images are, the easier it will be for us to assess whether your vehicle is right for our platform.<br><br>
                             <strong>Need help taking photos? View our <a target="_blank" rel="noopener noreferrer" class="chakra-link css-1tue41d" href="/pdf/photo-tips-and-checklist.pdf">Photo Guide</a>!</strong></p>
                             <div>
-                                        <input type="file" name="Images" />
+                                        <input type="file" name="Images" multiple />
                             </div></div>
                             <hr aria-orientation="horizontal" class="chakra-divider css-4qkmcy"><div class="css-j7qwjs">
                                 <p class="css-qz1zj3 e1kg4do43"><strong>What happens next:</strong> Once you submit this form, our team will review it to see if your vehicle is a good fit for Marqued. If it is, we'll contact you directly to discuss reserve pricing, create a listing page, and schedule a time for your upcoming auction.</p><div class="css-1vimnmh">
