--- a/AuctionManagementSystem/Views/Vehicle/vehiclesubmission.cshtml
+++ b/AuctionManagementSystem/Views/Vehicle/vehiclesubmission.cshtml
@@ -400,8 +400,8 @@
                             <div class="css-12zwvwm">
                             <p class="css-1rpfd8x e1kg4do43">Does the above odometer reading reflect the total mileage on this vehicle?</p>
                             <div class="css-zoser8"><div><div class="css-1q701y2 eddhcra1">
-                                            <button type="button" class="button" id="btnCorTypeYes">Yes</button>
-                                            <button type="button" class="button" id="btn_CorTypeNo">No</button>
+                                            <button type="button" name="odometerreadingreflect" value="Yes" class="button" id="btnCorTypeYes">Yes</button>
+                                            <button type="button" name="odometerreadingreflect" value="No" class="button" id="btn_CorTypeNo">No</button>
                                         </div>
                                     </div>
                                 </div>
