--- a/AuctionManagementSystem/Views/Vehicle/vehiclesubmission.cshtml
+++ b/AuctionManagementSystem/Views/Vehicle/vehiclesubmission.cshtml
@@ -189,6 +189,22 @@
             padding-bottom: 24px;
             margin-bottom: 4px;
         }
+
+        .css-1v0z9x1 {
+            min-width: 80px;
+            font-family: "Barlow Semi Condensed", Roboto, Helvetica, Arial, sans-serif;
+            font-weight: 400;
+            font-size: 20px;
+            line-height: 30px;
+            background: rgb(225, 226, 227);
+            padding: 9px 24px;
+            border: none;
+        }
+
+            .css-1v0z9x1:hover {
+                background: rgb(255, 255, 255);
+                color: rgb(152, 104, 66);
+            }
 </style>
     
     <script>
