Vehicle new design and admin functionalities.

--- a/AuctionManagementSystem/Views/Admin/Index.cshtml
+++ b/AuctionManagementSystem/Views/Admin/Index.cshtml
@@ -28,7 +28,7 @@
                     <div class="inner">
                         <h3>23</h3>
 
-                        <p>Companies</p>
+                        <p>User</p>
                     </div>
                     <div class="icon">
                         <i class="ion ion-bag"></i>
@@ -43,7 +43,7 @@
                     <div class="inner">
                         <h3>24</h3>
 
-                        <p>Services</p>
+                        <p>Vehicles</p>
                     </div>
                     <div class="icon">
                         <i class="ion ion-stats-bars"></i>
@@ -58,7 +58,7 @@
                     <div class="inner">
                         <h3>25</h3>
 
-                        <p>Surveys</p>
+                        <p>Auctions</p>
                     </div>
                     <div class="icon">
                         <i class="ion ion-person-add"></i>
@@ -73,7 +73,7 @@
                     <div class="inner">
                         <h3>26</h3>
 
-                        <p>Unique Customers</p>
+                        <p>Bids</p>
                     </div>
                     <div class="icon">
                         <i class="ion ion-pie-graph"></i>
