--- a/AuctionManagementSystem/Views/Shared/_Layout.cshtml
+++ b/AuctionManagementSystem/Views/Shared/_Layout.cshtml
@@ -22,6 +22,7 @@
     <!-- Custom CSS -->
     <link rel="stylesheet" href="~/css/style.css">
     <link rel="stylesheet" href="~/css/responsive.css">
+    <link href="~/css/site.css" rel="stylesheet" />
 
 </head>
 <body>
@@ -83,7 +84,10 @@
                                 <a href="#"><img src="~/images/logo-dark.png" alt=""></a>
                             </div>
                             <ul>
-                                <li class="has-child-menu">
+                                <li><a asp-action="Index" asp-controller="Home">Auctions</a></li>
+                                <li><a asp-action="AddVehicle" asp-controller="Vehicle">Sell A Car</a></li>
+                                <li><a asp-action="About" asp-controller="Home">About</a></li>
+                               @* <li class="has-child-menu">
                                     <a href="javascript:void(0)">Home</a>
                                     <i class="fl flaticon-plus">+</i>
                                     <ul class="sub-menu">
@@ -124,8 +128,8 @@
                                         <li><a href="blog-standard.html">Blog Standard</a></li>
                                         <li><a href="blog-details.html">Blog Details</a></li>
                                     </ul>
-                                </li>
-                                <li><a href="contact.html">contact</a></li>
+                                </li>*@
+                                <li><a asp-action="Contact" asp-controller="Home">contact</a></li>
                             </ul>
 
                             <div class="contact-mail inner-contact-mail mt-5 d-block d-xl-none">
@@ -154,7 +158,7 @@
             </div>
         </div>
     </header>
-    <!-- ===============  header area end =============== -->
+    <!-- ===============  header area end =============== -->@*
     <!-- =============== breadcrumb area start =============== -->
     <div class="breadcrumb breadcrumb-style-one mb-0 ">
         <div class="container">
@@ -167,7 +171,7 @@
             </div>
         </div>
     </div>
-    <!-- =============== breadcrumb area end =============== -->
+    <!-- =============== breadcrumb area end =============== -->*@
     <!-- =============== register-section start =============== -->
     <!-- ===============  header area end =============== -->
     <!-- ===============  hero area start=============== -->
@@ -283,7 +287,6 @@
     <script src="~/js/jquery-3.6.0.min.js"></script>
     <script src="~/js/bootstrap.bundle.min.js"></script>
     <script src="~/js/swiper-bundle.min.js"></script>
-    <script src="~/js/jquery.nice-select.js"></script>
     <script src="~/js/jquery.magnific-popup.min.js"></script>
     <!-- Custom JavaScript -->
     <script src="~/js/main.js"></script>
