--- a/AuctionManagementSystem/Views/Admin/GetAllUsers.cshtml
+++ b/AuctionManagementSystem/Views/Admin/GetAllUsers.cshtml
@@ -11,9 +11,9 @@
                 <h1>Manage users</h1>
             </div>
             <div class="col-sm-6">
-                <ol class="breadcrumb float-sm-right">
+                @*<ol class="breadcrumb float-sm-right">
                     <li class="breadcrumb-item"><a asp-action="CreateManager" class="btn btn-info">Create</a></li>
-                </ol>
+                </ol>*@
             </div>
         </div>
     </div><!-- /.container-fluid -->
