--- a/AuctionManagementSystem/Views/Admin/GetAllVehicles.cshtml
+++ b/AuctionManagementSystem/Views/Admin/GetAllVehicles.cshtml
@@ -1,4 +1,4 @@
-﻿@model List<AddVehicleView>
+﻿@model List<AddVehicle>
 @{
     ViewData["Title"] = "All Vehicles";
     Layout = "~/Views/Shared/_AdminLayout.cshtml";
@@ -11,9 +11,9 @@
                 <h1>Manage vehicle</h1>
             </div>
             <div class="col-sm-6">
-                <ol class="breadcrumb float-sm-right">
+                @*<ol class="breadcrumb float-sm-right">
                     <li class="breadcrumb-item"><a asp-action="CreateManager" class="btn btn-info">Create</a></li>
-                </ol>
+                </ol>*@
             </div>
         </div>
     </div><!-- /.container-fluid -->
