--- a/AuctionManagementSystem/Views/Shared/_AdminLayout.cshtml
+++ b/AuctionManagementSystem/Views/Shared/_AdminLayout.cshtml
@@ -41,7 +41,7 @@
 
         <!-- Preloader -->
         <div class="preloader flex-column justify-content-center align-items-center">
-            <img class="animation__shake" src="~/assets/dist/img/AdminLTELogo.png" alt="AdminLTELogo" height="60" width="60">
+            <h1>AMS</h1>
         </div>
 
         <!-- Navbar -->
@@ -73,7 +73,7 @@
             <!-- Brand Logo -->
             <a href="index3.html" class="brand-link">
                 <img src="~/assets/dist/img/AdminLTELogo.png" alt="AdminLTE Logo" class="brand-image img-circle elevation-3" style="opacity: .8">
-                <span class="brand-text font-weight-light">AdminLTE 3</span>
+                <span class="brand-text font-weight-light">Admin Portal</span>
             </a>
 
             <!-- Sidebar -->
