home page, login/singup new design implementations.

--- a/AuctionManagementSystem/Views/Shared/_Layout.cshtml
+++ b/AuctionManagementSystem/Views/Shared/_Layout.cshtml
@@ -26,14 +26,14 @@
 
 </head>
 <body>
-    <div class="preloader">
+@*    <div class="preloader">
         <div class="loader">
             <span></span>
             <span></span>
             <span></span>
             <span></span>
         </div>
-    </div>
+    </div>*@
 
     <!-- ===============  search area start =============== -->
 
@@ -87,49 +87,8 @@
                                 <li><a asp-action="Index" asp-controller="Home">Auctions</a></li>
                                 <li><a asp-action="AddVehicle" asp-controller="Vehicle">Sell A Car</a></li>
                                 <li><a asp-action="About" asp-controller="Home">About</a></li>
-                               @* <li class="has-child-menu">
-                                    <a href="javascript:void(0)">Home</a>
-                                    <i class="fl flaticon-plus">+</i>
-                                    <ul class="sub-menu">
-                                        <li><a href="index.html">Home Accessories </a></li>
-                                        <li><a href="index-car.html">Home Car</a></li>
-                                        <li><a href="index-land.html">Home Land</a></li>
-                                        <li><a href="index-art-light.html">Home Light-art</a></li>
-                                        <li><a href="index-art-dark.html">Home Dark-art</a></li>
-                                    </ul>
-                                </li>
-
-                                <li class="has-child-menu">
-                                    <a href="javascript:void(0)">auction</a>
-                                    <i class="fl flaticon-plus">+</i>
-                                    <ul class="sub-menu">
-                                        <li><a href="auction.html">auction</a></li>
-                                        <li><a href="auction-details.html">auction details</a></li>
-                                    </ul>
-                                </li>
-                                <li class="has-child-menu">
-                                    <a href="javascript:void(0)">Pages</a>
-                                    <i class="fl flaticon-plus">+</i>
-                                    <ul class="sub-menu">
-                                        <li><a href="about.html">about</a></li>
-                                        <li><a href="winner.html">winner</a></li>
-                                        <li><a href="login">login</a></li>
-                                        <li><a href="register">register</a></li>
-                                        <li><a href="faq.html">faq</a></li>
-                                        <li><a href="privacy.html">Privacy Policy</a></li>
-                                        <li><a href="404.html">Error</a></li>
-                                    </ul>
-                                </li>
-                                <li class="has-child-menu">
-                                    <a href="javascript:void(0)">Blog</a>
-                                    <i class="fl flaticon-plus">+</i>
-                                    <ul class="sub-menu">
-                                        <li><a href="blog.html">Blog</a></li>
-                                        <li><a href="blog-standard.html">Blog Standard</a></li>
-                                        <li><a href="blog-details.html">Blog Details</a></li>
-                                    </ul>
-                                </li>*@
                                 <li><a asp-action="Contact" asp-controller="Home">contact</a></li>
+                                <li><a asp-action="Login" asp-controller="Account">Login/SignUp</a></li>
                             </ul>
 
                             <div class="contact-mail inner-contact-mail mt-5 d-block d-xl-none">
