--- a/AuctionManagementSystem/Views/Vehicle/vehiclesubmission.cshtml
+++ b/AuctionManagementSystem/Views/Vehicle/vehiclesubmission.cshtml
@@ -6,6 +6,14 @@
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.4/jquery.min.js"></script>
 <script>
     $(document).ready(function () {
+        //var uploadField = document.getElementById("file");
+
+        //uploadField.onchange = function () {
+        //    if (this.files[0].size > 22000) {
+        //        alert("File is too big!");
+        //        this.value = "";
+        //    };
+        //};
         $("#btnCorTypeYes").click(function () {
             $("#CORTypeYN").show();
         });
@@ -63,7 +71,6 @@
             $("#VehicleReserve").show();
         });
         ////End--->
-
         ////Start--> Additional Info
         $("#AddInfoY").click(function () {
             $("#AddInfoR").show();
@@ -176,7 +183,7 @@
                         <h3>Vehicle Details</h3>
                         <div class="contact-input-group">
                             <label for="first-Name">Year</label>
-                            <input type="number" placeholder="Enter year" name="Year">
+                            <input type="number" placeholder="Enter year" name="Year" value="@Model.Year">
                         </div>
                         <div class="contact-input-group">
                             <label for="first-Name">Make</label>
@@ -245,24 +252,24 @@
                         </div>
                         <div class="contact-input-group">
                             <label for="first-Name">How many miles (or kilometers) have been added during your ownership?</label>
-                            <input type="number" placeholder="Enter miles/kilometers" min="0" name="Vmiles">
+                            <input type="number" placeholder="Enter miles/kilometers" min="0" value="@Model.Vmiles" name="Vmiles">
                             @Html.ValidationMessageFor(x=>x.Vmiles,string.Empty,new {@class="text-danger"})
                         </div>
                         <div class="mt-3">
                             @* <label for="email">Does the above odometer reading reflect the total mileage on this vehicle?</label>*@
                             <div class="switch-field">
-                                <input type="radio" value="MILES" name="mileageDistanceUnit" id="mileageDistanceUnitY">
+                                <input type="radio" value="@Model.mileageDistanceUnit" name="mileageDistanceUnit" id="mileageDistanceUnitY">
                                 <label for="mileageDistanceUnitY">MILES</label>
-                                <input type="radio" id="mileageDistanceUnitN" name="mileageDistanceUnit" value="Kilometers" checked />
+                                <input type="radio" id="mileageDistanceUnitN" name="mileageDistanceUnit" value="@Model.mileageDistanceUnit" checked />
                                 <label for="mileageDistanceUnitN">Kilometers</label>
                             </div>
                         </div>
                         <div class="mt-3">
                             <label for="email">Do you know anything about this vehicle's prior ownership or history?</label>
                             <div class="switch-field">
-                                <input type="radio" id="btn_VehicleOwnerShipHistoryY" name="VehicleOwnerShipHistory" value="1" />
+                                <input type="radio" id="btn_VehicleOwnerShipHistoryY" name="VehicleOwnerShipHistory" value="@Model.VehicleOwnerShipHistory" />
                                 <label for="btn_VehicleOwnerShipHistoryY">Yes</label>
-                                <input type="radio" id="btn_VehicleOwnerShipHistoryN" name="VehicleOwnerShipHistory" value="0" checked />
+                                <input type="radio" id="btn_VehicleOwnerShipHistoryN" name="VehicleOwnerShipHistory" value="@Model.VehicleOwnerShipHistory" checked />
                                 <label for="btn_VehicleOwnerShipHistoryN">No</label>
                             </div>
                         </div>
@@ -295,13 +302,13 @@
                         <div class="mt-3">
                             <label for="email">Are you a dealer, or a private seller?</label>
                             <div class="form-check">
-                                <input type="radio" class="form-check-input" value="DEALER" name="sellerType" id="rdrseller">
+                                <input type="radio" class="form-check-input" value="@Model.VSeller" name="sellerType" id="rdrseller">
                                 <label class="form-check-label" for="flexRadioDefault1"> Dealer</label>
                             </div>
 
                             <br />
                             <div class="form-check">
-                                <input type="radio" class="form-check-input" value="PRIVATE" name="sellerType" id="rdrPrivate">
+                                <input type="radio" class="form-check-input" value="@Model.VSeller" name="sellerType" id="rdrPrivate">
                                 <label class="form-check-label" for="flexRadioDefault2">
                                     Private Party
                                 </label>
@@ -340,9 +347,9 @@
                         @*TITLE sTATUS*@
                         <div class="contact-input-group">
                             <label for="drop">State</label>
-                            <select class="form-select" aria-label="Default select example" name="VehicleLocated">
+                            <select class="form-select" aria-label="Default select example" name="VehicleLocated" >
                                 <option selected value="0">Select State</option>
-                                <option selected="@Model.VehicleLocated">Albama</option>
+                                <option>Albama</option>
                                 <option>Alaska</option>
                                 <option>Arizona</option>
                                 <option>Araskas</option>
@@ -386,7 +393,7 @@
                         </div>
                         <div class="contact-input-group" id="AddInfoR">
                             <label for="email">Please explain below:</label>
-                            <textarea id="massege" cols="30" rows="7" placeholder="Enter Details"></textarea>
+                            <textarea id="massege" cols="30" rows="7" name="AdInfoRemarks" placeholder="Enter Details" Value="@Model.AdInfoRemarks"></textarea>
                         </div>
                         <h4>Photos</h4>
                         <div class="contact-input-group">
@@ -396,7 +403,7 @@
                                 <strong>Need help taking photos? View our <a target="_blank" rel="noopener noreferrer" class="chakra-link css-1tue41d" href="/pdf/photo-tips-and-checklist.pdf">Photo Guide</a>!</strong>
                             </p>
                             <div>
-                                <input type="file" name="Images" multiple />
+                                <input type="file" id="file" name="Images" si multiple value="@Model.Images" />
                             </div>
                         </div>
 
