--- a/AuctionManagementSystem/Views/Shared/_Layout.cshtml
+++ b/AuctionManagementSystem/Views/Shared/_Layout.cshtml
@@ -126,6 +126,7 @@
                                         
                                     </ul>
                                 </li>
+                                <li><a asp-action="Contact" asp-controller="Home">Contact</a></li>
                             </ul>
 
                             <div class="contact-mail inner-contact-mail mt-5 d-block d-xl-none">
