--- a/AuctionManagementSystem/Views/Vehicle/AuctionDetails.cshtml
+++ b/AuctionManagementSystem/Views/Vehicle/AuctionDetails.cshtml
@@ -363,7 +363,7 @@
                         setTimeout(function () {
                             location.reload();
                         }, 3000);
-                        location.href = 'Index';
+                        location.href = '~?Home/Index';
                         return true
                     }
                     else
@@ -379,28 +379,7 @@
             return false;
           }
     </script>
-    <script type="text/javascript">
-        //$("body").on("click", "#btn_PlaceBid", function () {
-        //    debugger;
-        //    const urlParams = new URLSearchParams(window.location.search);
-        //    const myParam = urlParams.get('AvId');
-        //    //var txtName = $("#txtName");
-        //    //var txtCountry = $("#txtCountry");
-        //    var _customer = {};
-        //    _customer.Name = txtName.val();
-        //    _customer.Country = txtCountry.val();
-        //    $.ajax({
-        //        type: "POST",
-        //        url: "/Home/InsertCustomer",
-        //        data: JSON.stringify(_customer),
-        //        contentType: "application/json; charset=utf-8",
-        //        dataType: "json",
-        //        success: function (r) {
-        //            alert("CustomerId: " + r.CustomerId.toString());
-        //        }
-        //    });
-        //});
-    </script>
+    
 </body>
 
 </html>
