--- a/AuctionManagementSystem/Views/Home/Contact.cshtml
+++ b/AuctionManagementSystem/Views/Home/Contact.cshtml
@@ -4,7 +4,7 @@
 }
 <!doctype html>
 <html lang="en">
-
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.4/jquery.min.js"></script>
 <head>
     <title>Bidgen - Bid and Auction HTML Template</title>
 </head>
@@ -62,7 +62,6 @@
                 <div class="col-lg-7 mt-5 mt-lg-0">
                     <div class="contact-form">
                         <h4>Questions or Comments?</h4>
-                        <form action="#" id="contact_form" method="post">
                             <div class="contact-input-group">
                                 <label for="first-Name">Full Name</label>
                                 <input type="text" id="FullName" placeholder="Full Name">
@@ -76,58 +75,61 @@
                                 <textarea id="Message" cols="30" rows="7" placeholder="Type your Message"></textarea>
                             </div>
                             <div class="contact-input-group mt-0">
-                                <button type="submit" onclick="Contact()" class="submit-btn">Submit Comment</button>
+                                <button type="submit" id="btnSave"  class="submit-btn">Submit Comment</button>
                             </div>
-                        </form>
                     </div>
                 </div>
             </div>
         </div>
     </div>
     <script>
-        function Contact() {
-            debugger;
-            var FullName = $("#FullName").val();
-            var Email = $("#Email").val();
-            var Message = $("#Message").val();
-            if (FullName == "") {
-                swal("Error", "Name Can't be Null.", "error");
-                return false;
-            }
-            if (Email == "") {
-                swal("Error", "Email Can't be Null.", "error");
-                return false;
-            }
-            if (Message == "") {
-                swal("Error", "Message Can't be Null.", "error");
-                return false;
-            }
-            $.ajax({
-                type: "POST",
-                url: "/Home/Contact",
-                data: { name: FullName, email: Email, message: Message },
-                dataType: "json",
-                success: function (data) {
-                    if (data == 1) {
-                        swal("Saved!", "Your Bid Has Been Saved Succesfully.", "success");
-                        setTimeout(function () { 
-                        setTimeout(function () {
-                            location.href = 'Home/Index';
-                        }, 3000);
-                  
-                        return true
-                    }
-                    else {
-                        swal("Error!", "Something went wrong.", "error");
-                        return false;
-                    }
-                },
-                error: function () {
-                    swal("Error", "Something went wrong.", "error");
+        $(document).ready(function () {
+            $("#btnSave").click(function () {
+                debugger;
+                var FullName = $("#FullName").val();
+                var Email = $("#Email").val();
+                var Message = $("#Message").val();
+                if (FullName == "") {
+                    swal("Error", "Name Can't be Null.", "error");
+                    return false;
                 }
+                if (Email == "") {
+                    swal("Error", "Email Can't be Null.", "error");
+                    return false;
+                }
+                if (Message == "") {
+                    swal("Error", "Message Can't be Null.", "error");
+                    return false;
+                }
+                $.ajax({
+                    type: "POST",
+                    url: "/Home/Contact",
+                    data: { name: FullName, email: Email, message: Message },
+                    dataType: "json",
+                    success: function (data) {
+                        if (data == 1) {
+                            swal("Saved!", "Your Bid Has Been Saved Succesfully.", "success");
+                            setTimeout(function () {
+                                location.href = '/Index';
+                            }, 3000);
+                            //return true
+                        }
+                        else {
+                            swal("Error!", "Something went wrong.", "error");
+                            return false;
+                        }
+                    },
+                    error: function () {
+                        swal("Error", "Something went wrong.", "error");
+                    }
+                });
+                return false;
             });
-            return false;
-        }
+        });
+
+    </script>
+    <script>
+        
     </script>
    
 </body>
